--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./Style/style.css">
     <script src="./script/main.js"></script>
-    <title>Bright Minds Day Home</title>
+    <title>Sample Day Home</title>
 
 </head>
 <body>
     <header class="navbar">
-        <div class="logo">Bright Minds Day Home</div>
+        <div class="logo">Sample Day Home</div>
         <nav class="nav-links">
           <ul>
             <li><a href="#home">Home</a></li>
@@ -28,7 +28,7 @@
 
       <section class="banner" id="home">
         <div class="banner-content">
-          <h1>Welcome to Bright Minds Day Home</h1>
+          <h1>Welcome to Sample Day Home</h1>
           <p>
             Where every little step matters! At Little Stars Daycare, we provide a nurturing, safe, and engaging environment for your child to learn, grow, and shine bright.
           </p>
@@ -38,15 +38,15 @@
 
       <section class="about-us" id="about">
         <div class="about-container">
-          <h2>Why Choose Bright Minds Dayhome?</h2>
+          <h2>Why Choose Sample Dayhome?</h2>
           <p>
-            At Bright Minds Dayhome, we take pride in offering a caring and safe haven where children thrive. Our mission is to foster a nurturing, stimulating, and welcoming environment tailored to the needs of every child. 
+            At Sample Dayhome, we take pride in offering a caring and safe haven where children thrive. Our mission is to foster a nurturing, stimulating, and welcoming environment tailored to the needs of every child. 
           </p>
           <p>
             With a focus on holistic development, we provide tools and opportunities that lay the foundation for happiness and success. Our activities are thoughtfully designed, blending educational theories with engaging, child-centered experiences. Your child’s well-being and growth are at the heart of everything we do.
           </p>
           <p>
-            Discover how Bright Minds Dayhome can shape your child’s future. <a href="#contact" class="about-link">Contact us today to learn more!</a>
+            Discover how Sample Dayhome can shape your child’s future. <a href="#contact" class="about-link">Contact us today to learn more!</a>
           </p>
         </div>
       </section>
@@ -64,10 +64,10 @@
           <div class="purpose-content">
             <h2>Our Purpose and Promise</h2>
             <p>
-              At Bright Minds Dayhome, our purpose is to foster a nurturing and inspiring environment where every child feels valued and empowered. We aim to create a space filled with joy, curiosity, and growth.
+              At Sample Dayhome, our purpose is to foster a nurturing and inspiring environment where every child feels valued and empowered. We aim to create a space filled with joy, curiosity, and growth.
             </p>
             <p>
-              Through hands-on exploration, cooperative play, and creative learning experiences, we help children flourish in their social, emotional, and physical development. At Bright Minds Dayhome, every moment is a step toward a brighter future.
+              Through hands-on exploration, cooperative play, and creative learning experiences, we help children flourish in their social, emotional, and physical development. At Sample Dayhome, every moment is a step toward a brighter future.
             </p>
           </div>
         </div>
@@ -79,15 +79,15 @@
           <div class="contact-info">
             <div class="contact-item">
               <h3>Address</h3>
-              <p>Saddlecrest Park NE, <br>Calgary, AB T3J 5E7</p>
+              <p>abcd, <br>Calgary, AB A1B 2C3</p>
             </div>
             <div class="contact-item">
               <h3>Phone Number</h3>
-              <p><a href="tel:+15877191347">+1 (587) 719-1347</a></p>
+              <p><a href="tel:+14372544241">+1 (437) 254-4241</a></p>
             </div>
             <div class="contact-item">
               <h3>Email</h3>
-              <p><a href="mailto:brightmindsdayhome74@gmail.com">brightmindsdayhome74@gmail.com</a></p>
+              <p><a href="mailto:manjotsinghpnp@gmail.com">manjotsinghpnp@gmail.com</a></p>
             </div>
           </div>
         </div>
@@ -97,7 +97,7 @@
         <div class="map-container">
           <h2 class="map-heading">Our Location</h2>
           <div class="map-wrapper">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3743.764042883308!2d-113.94061050947512!3d51.134565484429764!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x537163c04f80ebc5%3A0x55c111636be4dc6e!2sBrightminds%20Dayhome!5e0!3m2!1sen!2sca!4v1732100803687!5m2!1sen!2sca" 
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d321200.4922713152!2d-114.08783499999998!3d51.02762329999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x537170039f843fd5%3A0x266d3bb1b652b63a!2sCalgary%2C%20AB!5e0!3m2!1sen!2sca!4v1732750520775!5m2!1sen!2sca" 
               width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy">
             </iframe>
           </div>
